docs: :poop: Add print

--- a/banana-leaf-disease-detection.ipynb
+++ b/banana-leaf-disease-detection.ipynb
@@ -298,7 +298,8 @@
    "source": [
     "test_imgs,test_labels=next(test_batches)\n",
     "plotImages(test_imgs)\n",
-    "print(test_labels)"
+    "print(test_labels)\n",
+    "print()"
    ]
   },
   {
