style: :recycle: Update import functions

--- a/banana-leaf-disease-detection.ipynb
+++ b/banana-leaf-disease-detection.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "import tensorflow as tf\n",
     "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import Dense, Activation, Flatten, Conv2D, MaxPool2D, BatchNormalization, Dropout\n",
+    "from tensorflow.keras.layers import Dense, Flatten, Conv2D, MaxPool2D\n",
     "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
     "import keras\n",
     "import matplotlib.pyplot as plt\n",
